# ompi-pmix-refactoring

./: 0001-Add-oshmem-timings.patch  config-rel.sh  config.sh  hpcx.paths  sync.sh
config/: opal_check_pmi.m4
ompi/communicator/: comm.c
ompi/mca/bml/r2/: bml_r2.c
ompi/mca/coll/base/: coll_base_alltoall.c  coll_base_util.c
ompi/mca/osc/rdma/: osc_rdma_comm.c  osc_rdma_component.c  osc_rdma_peer.c
ompi/mca/osc/ucx/: osc_ucx_component.c
ompi/mca/pml/ucx/: pml_ucx.c
ompi/mca/rte/orte/: rte_orte.h
ompi/proc/: proc.c
ompi/runtime/: ompi_mpi_init.c
ompi/tools/mpisync/: sync.c
ompi/util/: timings.h
opal/datatype/: opal_datatype_pack.c
opal/mca/base/: mca_base_open.c
opal/mca/btl/openib/: btl_openib.c
opal/mca/btl/smcuda/: btl_smcuda_component.c
opal/mca/btl/uct/: btl_uct_component.c  btl_uct_module.c  btl_uct_rdma.c
opal/mca/common/cuda/: common_cuda.c  common_cuda.h
opal/mca/common/ucx/: common_ucx.c  common_ucx.h  common_ucx_wpool.c  common_ucx_wpool.h
opal/mca/hwloc/: hwloc.h
opal/mca/hwloc/base/: base.h  hwloc_base_util.c
opal/mca/mpool/base/: mpool_base_alloc.c
opal/threads/: wait_sync.h
opal/util/: timings.h
orte/mca/ess/base/: ess_base_std_app.c
orte/mca/ess/pmi/: ess_pmi_module.c
orte/mca/plm/base/: plm_base_launch_support.c
orte/mca/rmaps/: rmaps_types.h
orte/mca/rmaps/base/: rmaps_base_binding.c  rmaps_base_frame.c  rmaps_base_print_fns.c  rmaps_base_support_fns.c
orte/mca/rmaps/lama/: rmaps_lama_params.c
orte/mca/rmaps/ppr/: rmaps_ppr.c
orte/mca/rtc/hwloc/: rtc_hwloc.c
orte/mca/schizo/slurm/: schizo_slurm.c
orte/orted/: orted_main.c
orte/orted/pmix/: Makefile.am  pmix_basic.h  pmix_peer_process.c  pmix_peer_sendrecv.c  pmix_server.c  pmix_server.h  pmix_server_basic.h  pmix_server_connection.c  pmix_server_internal.h  pmix_server_peer_comm.c  pmix_server_process.c  pmix_server_sendrecv.c
orte/orted/pmix/platform/: Makefile.am  pmix_job.c  pmix_peer.c  pmix_peer.h  pmix_platform.h  pmix_server_job.c  pmix_server_peer.c  pmix_server_peer.h  pmix_server_platform.h
orte/runtime/: orte_init.c  runtime.h
orte/tools/orte-clean/: orte-clean.c
orte/tools/orte-dvm/: orte-dvm.c
orte/tools/orte-ps/: orte-ps.c
orte/tools/orte-server/: orte-server.c
orte/tools/orte-submit/: orte-submit.c
orte/tools/orte-top/: orte-top.c
orte/tools/orterun/: orterun.c
orte/util/: attr.h
oshmem/mca/memheap/base/: base.h  memheap_base_alloc.c  memheap_base_mkey.c  memheap_base_select.c
oshmem/mca/scoll/base/: scoll_base_frame.c  scoll_base_select.c
oshmem/mca/scoll/mpi/: scoll_mpi_module.c
oshmem/runtime/: oshmem_shmem_exchange.c  oshmem_shmem_finalize.c  oshmem_shmem_init.c  runtime.h  timing.h
(+4 files in other folders)
