#
# Copyright (c) 2014      Intel, Inc. All rights reserved.
# Copyright (c) 2014      Artem Polyakov <artpol84@gmail.com>
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
          orted/pmix/pmix_server.h \
          orted/pmix/pmix_server_internal.h \
          orted/pmix/pmix_basic.h

lib@ORTE_LIB@_la_SOURCES += \
          orted/pmix/pmix_server.c \
          orted/pmix/pmix_server_connection.c \
          orted/pmix/pmix_server_sendrecv.c \
          orted/pmix/pmix_peer_process.c

include orted/pmix/platform/Makefile.am
