#
# Copyright (c) 2014      Intel, Inc. All rights reserved.
# Copyright (c) 2014      Artem Polyakov <artpol84@gmail.com>
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
          orted/pmix/platform/pmix_peer.h \
          orted/pmix/platform/pmix_platform.h

lib@ORTE_LIB@_la_SOURCES += \
          orted/pmix/platform/pmix_peer.c \
          orted/pmix/platform/pmix_job.c
